dark mode fixed

--- a/style.css
+++ b/style.css
@@ -15,15 +15,15 @@
     --black: #212529;
     --sec_bg1: #ffffff;
     --sec_bg2: #f5f5f5e2;
-    --boxshadow: #01010126;
+    --boxshadow: #01010187;
 }
 
 [data-theme="dark"] {
     --royalblue: #00b9d5;
-    --accent-color: #ffffff;
+    --accent-color: #fddd25;
     --partwhite: #1e1b1b;
     --boldblack: #f1f1f1;          
-    --primary-dark: #b4f632; 
+    --primary-dark: #DFBBB1; 
     --accent-dark: #d0d7d1;       
     --white: #121212;             
     --light-gray: #1c1c1e;
@@ -32,7 +32,7 @@
     --black: #f8f9fa;
     --sec_bg1: #121212;            
     --sec_bg2: #1e1e1e;
-    --boxshadow: #0672ca43;
+    --boxshadow: #0672cad7;
 }
 
 *{
@@ -75,8 +75,8 @@ body{
     justify-content: space-between;
     align-items: center;
 
-    backdrop-filter: blur(10px);
-    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.5);
+    box-shadow: inset -4px -4px 16px 1px rgba(0, 0, 0, 0.5);
+    border-bottom: 1px solid var(--boldblack);
     transition: all 0.3s ease-in-out;
 }
 
@@ -410,7 +410,7 @@ section{
     background-repeat: no-repeat;
     min-height: 440px;
     border-radius: 20px;
-    box-shadow: 10px 12px 5px rgba(0, 0, 0, 0.7);
+    box-shadow: -5px 6px 15px 3px var(--boxshadow);
 }
 
 .about .content .col-right .content-title{
@@ -618,6 +618,7 @@ section{
 .services .content .card:hover{
     background-color: var(--royalblue);
     color: var(--partwhite);
+    box-shadow: -12px 15px 20px 6px var(--boxshadow);
 }
 
 .services .content .card:hover .icon-card{
@@ -645,13 +646,86 @@ section{
     filter: drop-shadow(-10px 4px 8px rgb(0, 0, 0, 0.3));
     transition: transform 0.2s, box-shadow 0.2s;
 }
-/* Projects */
-.projects {
+.custom-dropdown {
+  position: relative;
+  width: 90px;
+  font-size: 16px;
+}
+
+.dropdown-selected {
+  padding: 10px;
+  border: 1px solid var(--white);
+  border-radius: 4px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  color: var(--white);
+  background-color: var(--royalblue);
+  position: relative; 
+}
+
+.dropdown-selected::after {
+  content: '';
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  border: 5px solid transparent;
+  border-top-color: var(--white);
+  pointer-events: none;
+}
+
+.dropdown-options {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  right: 0;
+  border: 1px solid var(--boldblack);
+  border-radius: 4px;
+  background-color: var(--royalblue);
+  color: var(--boldblack);
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  z-index: 10;
+}
+
+.dropdown-options.show {
+  display: block;
+}
+
+.option {
+  padding: 10px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  color: var(--white);
+  transition: all 0.3s ease-in-out;
+}
+
+.option:hover {
+  /* background-color: var(--primary-dark); */
+  text-decoration: underline var(--white) 1px ;
+}
+
+.option.selected {
+  font-weight: bold;
+}
+svg {
+  width: 20px;
+  height: 20px;
+}
+
+/* Tools Section */
+.tools {
     /* background-image: linear-gradient(35deg, rgba(253, 253, 253, 0.03) 0%, rgba(253, 253, 253, 0.03) 53%,rgba(109, 109, 109, 0.03) 53%, rgba(109, 109, 109, 0.03) 59%,rgba(228, 228, 228, 0.03) 59%, rgba(228, 228, 228, 0.03) 66%,rgba(42, 42, 42, 0.03) 66%, rgba(42, 42, 42, 0.03) 95%,rgba(165, 165, 165, 0.03) 95%, rgba(165, 165, 165, 0.03) 100%),linear-gradient(205deg, rgba(62, 62, 62, 0.03) 0%, rgba(62, 62, 62, 0.03) 31%,rgba(200, 200, 200, 0.03) 31%, rgba(200, 200, 200, 0.03) 41%,rgba(30, 30, 30, 0.03) 41%, rgba(30, 30, 30, 0.03) 47%,rgba(151, 151, 151, 0.03) 47%, rgba(151, 151, 151, 0.03) 60%,rgba(95, 95, 95, 0.03) 60%, rgba(95, 95, 95, 0.03) 100%),linear-gradient(30deg, rgba(7, 7, 7, 0.03) 0%, rgba(7, 7, 7, 0.03) 19%,rgba(63, 63, 63, 0.03) 19%, rgba(63, 63, 63, 0.03) 33%,rgba(175, 175, 175, 0.03) 33%, rgba(175, 175, 175, 0.03) 37%,rgba(244, 244, 244, 0.03) 37%, rgba(244, 244, 244, 0.03) 60%,rgba(177, 177, 177, 0.03) 60%, rgba(177, 177, 177, 0.03) 100%),linear-gradient(90deg, rgb(162, 162, 162),rgb(229, 229, 229)); */
     background: var(--sec_bg1);
     margin: 0 auto 30px auto;
 }
-.projects .content,.project_btn {
+.tools .content,.project_btn {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -665,7 +739,7 @@ section{
     text-align: center;
 }
 
-.projects .content .card {
+.tools .content .card {
     background-color: var(--partwhite);
     width: 340px;
     margin: 10px;
@@ -681,7 +755,7 @@ section{
     z-index: 1;
     position: relative;
 }
-.projects .content .card .bg_text{
+.tools .content .card .bg_text{
     position: absolute;
     top: 50%;
     left: 45%;
@@ -708,7 +782,7 @@ section{
     }
   }
 
-.projects .content .card .info h3 {
+.tools .content .card .info h3 {
     text-align: center;
     color: var(--boldblack);
     font-size: 1.5rem;
@@ -718,12 +792,12 @@ section{
     z-index: 1;
 }
 
-.projects .content .card:hover {
+.tools .content .card:hover {
     /* background-image: linear-gradient(328deg, rgba(29, 29, 29, 0.05) 0%, rgba(29, 29, 29, 0.05) 25%,rgba(226, 226, 226, 0.05) 25%, rgba(226, 226, 226, 0.05) 50%,rgba(21, 21, 21, 0.05) 50%, rgba(21, 21, 21, 0.05) 75%,rgba(216, 216, 216, 0.05) 75%, rgba(216, 216, 216, 0.05) 100%),linear-gradient(172deg, rgba(0, 0, 0, 0.05) 0%, rgba(0, 0, 0, 0.05) 25%,rgba(108, 108, 108, 0.05) 25%, rgba(108, 108, 108, 0.05) 50%,rgba(21, 21, 21, 0.05) 50%, rgba(21, 21, 21, 0.05) 75%,rgba(236, 236, 236, 0.05) 75%, rgba(236, 236, 236, 0.05) 100%),linear-gradient(207deg, rgba(153, 153, 153, 0.05) 0%, rgba(153, 153, 153, 0.05) 25%,rgba(83, 83, 83, 0.05) 25%, rgba(83, 83, 83, 0.05) 50%,rgba(5, 5, 5, 0.05) 50%, rgba(5, 5, 5, 0.05) 75%,rgba(82, 82, 82, 0.05) 75%, rgba(82, 82, 82, 0.05) 100%),linear-gradient(297deg, rgba(26, 26, 26, 0.05) 0%, rgba(26, 26, 26, 0.05) 25%,rgba(223, 223, 223, 0.05) 25%, rgba(223, 223, 223, 0.05) 50%,rgba(232, 232, 232, 0.05) 50%, rgba(232, 232, 232, 0.05) 75%,rgba(153, 153, 153, 0.05) 75%, rgba(153, 153, 153, 0.05) 100%),linear-gradient(204deg, rgba(120, 120, 120, 0.05) 0%, rgba(120, 120, 120, 0.05) 25%,rgba(191, 191, 191, 0.05) 25%, rgba(191, 191, 191, 0.05) 50%,rgba(246, 246, 246, 0.05) 50%, rgba(246, 246, 246, 0.05) 75%,rgba(123, 123, 123, 0.05) 75%, rgba(123, 123, 123, 0.05) 100%),linear-gradient(90deg, rgb(32,234,255),rgb(37,116,255)); */
     color: var(--partwhite);
 }
 
-.projects .content .card:hover .info h3 {
+.tools .content .card:hover .info h3 {
     transform: translateY(-5px);
 }
 .btn {
